--- a/style/style.css
+++ b/style/style.css
@@ -142,15 +142,15 @@ section{
     text-decoration: none;
     font-weight: 600;
     font-size: .9rem;
-    color: black;
-    background:#f5dae3;
+    color: white;
+    background:#f7206b;
     border-radius: .5rem;
     cursor: pointer;
-    padding: .8rem 2rem ;
+    padding: .8rem 1rem ;
 }
 
 .btn:hover {
-    background-color: #f7206b;
+    background-color:#419197;
     letter-spacing: .1rem;
     color: white;
 }
@@ -183,6 +183,13 @@ section{
 }
 
 /* Hot Products */
+div .box{
+    border-radius: .5rem;
+    border:#191919 solid 2px;
+    padding: 10px;
+    background-color:#f5dae379;
+}
+
 .box-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
@@ -196,20 +203,20 @@ section{
 
 #wishlist-icon{
     margin-top: 1rem;
+    margin-left: 5px;
     display: inline-block;
     text-decoration: none;
     font-size: .9rem;
-    color: black;
-    background:#f5dae3;
+    color: white;
+    background:#f7206b ;
     border-radius: .5rem;
     cursor: pointer;
     padding: .8rem .5rem ;
 }
 
 #wishlist-icon:hover{
-    background-color: #f7206b;
+    background-color:#419197;
     letter-spacing: .1rem;
-    color: white;
 }
 
 .initial-price{
@@ -246,6 +253,13 @@ section{
 .logo-benefit i{
     font-size: 50px;
     font-weight: bolder;
+}
+
+/* New Arrival */
+.arrival-box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    gap: 1.5rem;
 }
 
 /* Order Page */
@@ -340,7 +354,13 @@ section{
     font-size: 25px;    
 }
 
-.wishlist-page .box-container .box{
+.wishlist-box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    gap: 1.5rem;
+}
+
+.wishlist-page .wishlist-box-container .box{
     margin-bottom: 20px;
 }
 
