--- a/style/style.css
+++ b/style/style.css
@@ -98,6 +98,232 @@ section{
     padding: 2rem 9%;
 }
 
+/* Profile Before Sign-In */
+.profile-page{
+    display:flex;
+    flex-direction: row;
+  }
+
+.greet-BSI {
+    flex-basis: 80%;
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 5px;
+  }
+
+  /* Sign In and Sign Up */
+.body-SISU {
+    margin-top: 100px;
+    font-family: "sagoe", sans-serif;
+    background-color: #FFEEF4;
+}
+
+.container {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 15px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    float: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.container h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    padding-top: 20px;
+}
+
+.form-groupSI {
+    margin-bottom: 10px;
+}
+
+.form-groupSI input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    display: inline-block;
+}
+
+.accountSI a {
+    text-decoration: none;
+}
+
+.accountSI a:hover {
+    text-decoration: underline;
+}
+
+.Login {
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: #f7206b;
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+
+.Login:hover {
+    letter-spacing: 1px;
+}
+
+.btn-login {
+    background-color: transparent;
+    border: 1px solid #ccc;
+    color: #333;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin-right: 10px;
+}
+
+.btn-login:hover {
+    background-color: #f5f5f5;
+}
+
+.accountSI p {
+    text-align: center;
+    line-height: 25px;
+}
+
+.form-groupSU {
+    margin-bottom: 10px;
+}
+
+.form-groupSU input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+
+.Signup {
+    background-color: #f7206b;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.Signup:hover {
+    letter-spacing: 1px;
+}
+
+.accountSU p a{
+    text-decoration: none;
+}
+
+.accountSU p a:hover{
+    text-decoration: underline;
+}
+
+/* Social media sign-up buttons */
+.btn-Signup {
+    background-color: transparent;
+    border: 1px solid #ccc;
+    color: #333;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.btn-Signup:hover {
+    background-color: #f5f5f5;
+}
+
+/* Term styles */
+.term {
+    font-size: 12px;
+    margin-top: 10px;
+}
+
+.term a {
+    color: #007bff;
+    text-decoration: none;
+}
+
+/* Profile After Sign In */
+.greet-AFSI {
+    flex-basis: 80%;
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 5px;
+}
+  
+.form-afsi {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+  
+.form-afsi h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+  
+.content-distributed {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+  
+.content-left,
+.content-right {
+    flex-basis: 48%;
+    display: grid;
+    grid-template-columns: 2fr;
+    width: 300px;
+}
+  
+.content-left label,
+.content-right label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+  
+.content-left input,
+.content-right input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+  
+.form-afsi button{
+    display: float;
+    float: right;
+}
+  
+.Changes {
+    background-color:#f7206b;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+  
+.Changes:hover {
+    background-color:#f7206bbe;
+}
+
+/* Home Page */
 .promo{
     background-color: #d9d9d996;
 }
@@ -119,22 +345,22 @@ section{
     justify-items: center;
     width: fit-content;
     height: fit-content;
-}
+ }
 
 .content span{
     color: #f7206b;
     font-size: 1.5rem;
     font-weight: bold;
-}
+  }
 
 .content h3{
     font-size: 3rem;
-}
+  }
 
 .content p{
     color:rgba(0, 0, 0, 0.5); 
     font-size: 1.2rem;
-}
+  }
 
 .btn{
     margin-top: 1rem;
@@ -147,26 +373,26 @@ section{
     border-radius: .5rem;
     cursor: pointer;
     padding: .8rem 1rem ;
-}
+  }
 
 .btn:hover {
     background-color:#419197;
     letter-spacing: .1rem;
     color: white;
-}
+  }
 
 .swiper-slide img{
     display: flex;
     width: 600px;
     height: 350px;
-}
+  }
 
 .separator{
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
+  }
 
 .separator hr{
     width: 40%;
@@ -174,32 +400,32 @@ section{
     border-width:0;
     color:black;
     background-color:black;
-}
+  }
 
 .separator h4{
     color: #f7206b;
     font-size: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
+  }
 
-/* Hot Products */
+    /* Hot Products */
 div .box{
     border-radius: .5rem;
     border:#191919 solid 2px;
     padding: 10px;
     background-color:#f5dae379;
-}
+  }
 
 .box-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     gap: 1.5rem;
-}
+  }
 
 .box img{
     width:10rem;
     height: 10rem;
-}
+  }
 
 #wishlist-icon{
     margin-top: 1rem;
@@ -212,23 +438,23 @@ div .box{
     border-radius: .5rem;
     cursor: pointer;
     padding: .8rem .5rem ;
-}
+  }
 
 #wishlist-icon:hover{
     background-color:#419197;
     letter-spacing: .1rem;
-}
+  }
 
 .initial-price{
     text-decoration: line-through;
-}
+  }
 
-/* Benefit */
+    /* Benefit */
 .benefit{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
     gap: 1rem;
-}
+  }
 
 .box-benefit{
     display: flex;
@@ -236,37 +462,37 @@ div .box{
     justify-content: center;
     border:1px solid #191919;
     padding: 12px
-}
+  }
 
 .benefit-content{
     padding-left: 12px;
-}
+  }
 
 .benefit-content h6{
     font-size: 18px;
-}
+  }
 
 .benefit-content p{
     font-size: 15px;
-}
+  }
 
 .logo-benefit i{
     font-size: 50px;
     font-weight: bolder;
-}
+  }
 
-/* New Arrival */
+    /* New Arrival */
 .arrival-box-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     gap: 1.5rem;
-}
+  }
 
-/* Order Page */
+    /* Order Page */
 .order-page{
     display:flex;
     flex-direction: row;
-}
+ }
 
 .menu-order{
     flex-basis: 20%;
@@ -275,11 +501,11 @@ div .box{
     border-radius: 2px;
     background-color: #FFEEF4;
     padding: 12px;
-}
+  }
 
 .menu-order ul {
     padding: 0;
-}
+  }
 
 .menu-order ul li a{
     text-decoration: none;
@@ -287,91 +513,91 @@ div .box{
     color: #191919;
     font-size: 20px;
     font-weight: medium;
-}
+  }
 
 .menu-order ul li a:hover{
     font-weight: bold;
-}
+ }
 
 .menu-order ul li a.active {
     text-decoration: none;
     font-weight: bold;
-}
-  
+  }
+    
 .my-order {
     flex-basis: 80%;
     background-color: #f9f9f9;
     padding: 20px;
     border-radius: 5px;
-}
-  
+  }
+    
 .my-order h2 {
     margin-bottom: 20px;
     font-size: 24px;
     color: #333;
-}
-  
+  }
+    
 .table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 10px;
-}
-  
+  }
+    
 .table th,
 .table td {
     padding: 10px;
     text-align: left;
     border-bottom: 1px solid #ccc;
-}
-  
+  }
+    
 .table th {
     background-color: #f5f5f5;
     font-weight: bold;
-}
-  
+  }
+    
 .order-number,
 .product-name,
 .total-price,
 .action,
 .status {
     font-weight: bold;
-}
-  
+  }
+    
 .action a {
     text-decoration: none;
     color: blue;
-}
-  
+  }
+    
 .action a:hover {
     text-decoration: underline;
-}
-  
-/* Wishlist Page */
+  }
+    
+    /* Wishlist Page */
 .wishlist-page h2{
     margin-top: 50px;
     margin-bottom: 20px;
     font-family:'Segoe UI', sans-serif;
     font-size: 25px;    
-}
+  }
 
 .wishlist-box-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     gap: 1.5rem;
-}
+  }
 
 .wishlist-page .wishlist-box-container .box{
     margin-bottom: 20px;
-}
+  }
 
-/* Confirm Order Page */
+    /* Confirm Order Page */
 .confirm-order{
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
     display: flex;
     justify-content: space-between;
-}
+  }
 
 .product-details {
     flex-basis: 45%;
@@ -379,31 +605,31 @@ div .box{
     padding: 20px;
     border-radius: 5px;
     text-align: center;
-}
+  }
 
 .product-details img {
     max-width: 100%;
     height: auto;
-}
+  }
 
 .order-details {
     flex-basis: 50%;
     background-color: #f5f5f5;
     padding: 20px;
     border-radius: 5px;
-}
+  }
 
 .order-details h2 {
     margin-bottom: 20px;
     font-size: 24px;
     color: #333;
-}
+  }
 
 form label {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
-}
+  }
 
 form input[type="text"],
 form textarea,
@@ -415,7 +641,7 @@ form select {
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-}
+  }
 
 form button {
     background-color: #007bff;
@@ -424,17 +650,17 @@ form button {
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
-}
+  }
 
 form button.cancel-btn {
     background-color: #d9534f;
-}
+  }
 
 form button:hover {
     background-color: #0056b3;
-}
+  }
 
-/* Scrool Top Button */
+    /* Scrool Top Button */
 .go-to-up{
     position: fixed;
     width: 50px;
@@ -448,13 +674,13 @@ form button:hover {
     color: white;
     font-size: 22px;
     border-radius: 50%;
-}
+  }
 
 html{
     scroll-behavior: smooth;
-}
+  }
 
-/* Footer */
+    /* Footer */
 footer{
     padding: 3rem 9%;
     width: 100%;
@@ -462,153 +688,218 @@ footer{
     justify-content: space-between;
     background-color: #D9D9D9;
     margin-bottom: 0px;
-}
+  }
 
 .img-payment input{
     width: 90px;
     height: 30px;
-}
+  }
 
 .img-download input{
     width:150px;
     height:50px;
-}
+  }
 
 
-@media(max-width: 768px){
-    .header {
-        font-size: 20px;
-    }
+    @media(max-width: 768px){
+        .header {
+            font-size: 20px;
+      }
+        
+        .header img{
+            height: 70px;
+      }
+        
+        .icon-header{
+            width:100px;
+            letter-spacing: 2px;
+      }
+
+        .icon-header a:hover{
+            font-size: 20.5px;
+      }
+        
+        #slide {
+            flex-wrap: wrap;
+      }
+
+        .separator hr{
+            width: 35%;
+      }
     
-    .header img{
-        height: 70px;
-    }
-    
-    .icon-header{
-        width:100px;
-        letter-spacing: 2px;
-    }
+        /* Profile Before Sign In */
+        .menu-order{
+            flex-basis: 30%;
+      }
+        
+        .greet-BSI {
+            flex-basis: 70%;
+      }
 
-    .icon-header a:hover{
-        font-size: 20.5px;
-    }
-    
-    #slide {
-        flex-wrap: wrap;
-    }
-
-    .separator hr{
-        width: 35%;
-    }
-  
-    /* Order Page */
-    .order-page{
-        display:flex;
-        flex-direction: column;
-    }
-
-    /* Footer */
-    footer{
-        font-size: 12px;
-    }
-    
-    .img-payment input{
-        width: 80px;
-        height: 25px;
-    }
-
-    .img-download input{
-        width:140px;
-        height:40px;
-    }
-}
-
-@media(max-width: 426px){
-    .header {
-        width: 100%;
-        font-size: 14px;
-        padding: 12px 20px;
-    }
-
-    .header img{
-        height: 40px;
-    }
-    
-    .search-product{
-        width:150px;
-    }
-    
-    .search-product input{
-        width: 83%;
-        height: fit-content;
-    }
-    
-    .icon-header{
-        width:70px;
-        letter-spacing: 3px;
-    }
-
-    .icon-header a:hover{
-        font-size: 14.5px;
-    }
-
-    .btn{
-        padding: .8rem 1.5rem ;
-    }
-
-    .swiper-slide img{
-        display: flex;
-        width: 300px;
-        height: 175px;
-    }
-
-    .separator hr{
-        width: 28%;
-    }
-    
-    .separator h4{
-        font-size: 12px;
-    }
-
-    /* Order Page */
-    .order-page{
-        display:flex;
-        flex-direction: column;
-    }
-
-    .my-order {
+        /* Profile After Sign In */
+        .menu-order{
+            flex-basis: 30%;
+      }
+        
+        .greet-AFSI {
         flex-basis: 100%;
+        background-color: #f9f9f9;
         padding: 20px;
-    }
-      
-    .my-order h2 {
-        margin-bottom: 5px;
-        font-size: 20px;
-    }
-      
-    .table {
-        width: 100%;
-        margin-top: 8px;
-        font-size: 10px;
-    }
-      
-    .table th,
-    .table td {
-        padding: 5px;
-    }
-
-    /* Footer */
-    footer{
-        font-size: 7.5px;
-    }
+        border-radius: 5px;
+      }
     
-    .img-payment input{
-        width: 40px;
-        height: 15px;
-    }
+        .content-distributed {
+        display: flex;
+        flex-direction: column;
+      }
+        
+        .content-left,
+        .content-right {
+        width: 270px;
+      }
 
-    .img-download input{
-        width:90px;
-        height:30px;
-    }
-}
+        /* Order Page */
+        .order-page{
+          display:flex;
+          flex-direction: column;
+      }
+
+        /* Footer */
+        footer{
+            font-size: 12px;
+      }
+        
+        .img-payment input{
+            width: 80px;
+            height: 25px;
+      }
+
+        .img-download input{
+            width:140px;
+            height:40px;
+      }
+  }
+
+    @media(max-width: 426px){
+        .header {
+            width: 100%;
+            font-size: 14px;
+            padding: 12px 20px;
+      }
+
+        .header img{
+            height: 40px;
+      }
+        
+        .search-product{
+            width:150px;
+      }
+        
+        .search-product input{
+            width: 83%;
+            height: fit-content;
+      }
+        
+        .icon-header{
+            width:70px;
+            letter-spacing: 3px;
+      }
+
+        .icon-header a:hover{
+            font-size: 14.5px;
+      }
+
+        .btn{
+            padding: .8rem 1.5rem ;
+      }
+
+        .swiper-slide img{
+            display: flex;
+            width: 300px;
+            height: 175px;
+      }
+
+        .separator hr{
+            width: 28%;
+      }
+        
+        .separator h4{
+            font-size: 12px;
+      }
+
+        /* Profile Before Sign In */
+        .greet-BSI {
+        flex-basis: 100%;
+        background-color: #f9f9f9;
+        padding: 20px;
+        border-radius: 5px;
+      }
+        
+        /* Profile Page After Sign In */
+        .menu-order{
+            flex-basis: 50%;
+      }
+        
+        .menu-order ul li a{
+            font-size: 18px;
+      }
+
+        .greet-AFSI {
+            flex-basis: 100%;
+            background-color: #f9f9f9;
+            padding: 20px;
+            border-radius: 5px;
+      }
+        
+        .content-distributed {
+            display: flex;
+            flex-direction: column;
+      }
+        
+        .content-left,
+        .content-right {
+            width: 203px;
+      }
+
+        /* Order Page */
+        .order-page{
+          display:flex;
+          flex-direction: column;
+      }
+  
+      .my-order {
+          flex-basis: 100%;
+          padding: 20px;
+      }
+        
+      .my-order h2 {
+          margin-bottom: 5px;
+          font-size: 20px;
+      }
+        
+      .table {
+          width: 100%;
+          margin-top: 8px;
+          font-size: 10px;
+      }
+        
+      .table th,
+      .table td {
+          padding: 5px;
+      }
+  
+        /* Footer */
+      footer{
+            font-size: 7.5px;
+      }
+        
+      .img-payment input{
+            width: 40px;
+            height: 15px;
+      }
+
+      .img-download input{
+            width:90px;
+            height:30px;
+      }
+  }
